--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -1,11 +1,12 @@
 .card {
-  margin: auto;
+  margin: 2rem auto;
   max-width: 40vw;
   padding: 2rem 0;
   border-radius: 0.2rem;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: #dae8f5;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2rem;
+  gap: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
